--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ base32 = "0.4.0"
 chrono = "0.4"
 itertools = "0.10.5"
 fake = "2.4"
+flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
 lazy_static = "1.4.0"
 native-tls = "0.2.11"
 postgres = "0.19.4"
