tidy up some validation checks + add the actual command to the error output to retry (#164)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ uuid = { version = "1.8", features = [ "v4"] }
 mimalloc = "0.1.43"
 log = "0.4.22"
 zstd = "0.13.2"
+colored = "2.1.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
