--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ sha256 = "1.1.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3"
+tempfile = "3.10.1"
 uuid = { version = "1.11", features = [ "v4"] }
 mimalloc = "0.1.43"
 log = "0.4.22"
