--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,33 +59,28 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
     needs: test
+    container:
+      image: clux/muslrust:1.90.0-stable-2025-09-27
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v27
-        with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Cache Nix store
-        uses: DeterminateSystems/magic-nix-cache-action@v7
-
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
         with:
-          shared-key: "rust-deps"
+          shared-key: "rust-deps-musl"
           cache-on-failure: true
 
       - name: Build Linux binary (musl)
-        run: |
-          nix build .#anonymiser-musl
-          cp result/bin/anonymiser anonymiser-x86_64-unknown-linux-musl
+        run: cargo build --release --target x86_64-unknown-linux-musl
+
+      - name: Copy binary
+        run: cp target/x86_64-unknown-linux-musl/release/anonymiser anonymiser-x86_64-unknown-linux-musl
 
       - name: Inspect binary
         run: |
           file anonymiser-x86_64-unknown-linux-musl
-          ldd anonymiser-x86_64-unknown-linux-musl || true
+          ldd anonymiser-x86_64-unknown-linux-musl || echo "ldd failed or binary is static"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
